[package]
name = "zamerzika"
version = "0.1.0"
edition = "2021"
authors = ["Ruslan Prakapchuk <fer.obbee@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }

[lib]
name = "zamerzika"
crate-type = ["cdylib"]
